context path fix

--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <header th:fragment="bar">
     <div class="topnav">
-        <a style="display: none" th:class="${top20Active}" class="top_nav_element" href="/app/most-viewed-cloud">Топ 20 💎</a>
-        <a th:class="${titleSearch}" class="top_nav_element" href="/app/pageviews">Статьи 📃</a>
-        <a th:class="${categorySearch}" class="top_nav_element" href="/app/categories-cloud">Категории 🗂</a>
+        <a style="display: none" th:class="${top20Active}" class="top_nav_element" href="/most-viewed-cloud">Топ 20 💎</a>
+        <a th:class="${titleSearch}" class="top_nav_element" href="/pageviews">Статьи 📃</a>
+        <a th:class="${categorySearch}" class="top_nav_element" href="/categories-cloud">Категории 🗂</a>
         <input th:if="${inputVisible}" class="top_nav_search_element" id="search_input" type="text"
                placeholder="поисковое слово">
         <button th:if="${pageSearchButtonVisible}" class="top_nav_search_element" id="search_button">🔎</button>
