jar build fix 2.0

--- a/src/main/resources/templates/cloud.html
+++ b/src/main/resources/templates/cloud.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
-<header th:replace="~{/fragments/topbar::bar(top20Active='top_nav_element_active', inputVisible=false)}"></header>
+<header th:replace="~{fragments/topbar::bar(top20Active='top_nav_element_active', inputVisible=false)}"></header>
 <div id="chart_area"></div>
 <div id="graph_area"></div>
 <div id="alertBox">Wikipedia временно не отвечает. 😑</div>
