--- a/src/main/resources/templates/pageviews.html
+++ b/src/main/resources/templates/pageviews.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<header th:replace="~{/fragments/topbar::bar(titleSearch='top_nav_element_active', inputVisible=true,pageSearchButtonVisible=true)}"></header>
+<header th:replace="~{fragments/topbar::bar(titleSearch='top_nav_element_active', inputVisible=true,pageSearchButtonVisible=true)}"></header>
 <div id="chart_area"></div>
 <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
