--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 <body>
-<header th:replace="~{/fragments/topbar::bar(categorySearch='top_nav_element_active', inputVisible=true, categoriesSearchButtonVisible=true)}"></header>
+<header th:replace="~{fragments/topbar::bar(categorySearch='top_nav_element_active', inputVisible=true, categoriesSearchButtonVisible=true)}"></header>
 <div id="path_area"></div>
 <div id="chart_area"></div>
 <div id="graph_area"></div>
